add basic layout to home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="home-container">
+  <div class="home-container__title">
+    <h1>Where to</h1>
+  </div>
+  <div class="home-container__search"></div>
+</div>
