add search input component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,5 +2,7 @@
   <div class="home-container__title">
     <h1>Where to</h1>
   </div>
-  <div class="home-container__search"></div>
+  <div class="home-container__search">
+    <app-search-input></app-search-input>
+  </div>
 </div>
