--- a/src/app/components/search-input/search-input.component.html
+++ b/src/app/components/search-input/search-input.component.html
@@ -1,1 +1,6 @@
-<p>search-input works!</p>
+<form class="search-form">
+  <mat-form-field class="search-form__input--center">
+    <mat-label>Places to go, things to do, hotels...</mat-label>
+    <input matInput />
+  </mat-form-field>
+</form>
