--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -17,3 +17,15 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.home-container__results {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0;
+}
+
+.home-container__results--card {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
