--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,31 +1,34 @@
 .home-container {
   width: 100%;
-}
 
-.home-container__title {
-  display: flex;
-  justify-content: center;
-  padding: 6rem 0;
-  h1 {
-    font-size: 5rem;
-    font-weight: 700;
+  &__search {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
   }
-}
 
-.home-container__search {
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}
+  &__title {
+    display: flex;
+    justify-content: center;
+    padding: 6rem 0;
+    h1 {
+      font-size: 5rem;
+      font-weight: 700;
+    }
+  }
 
-.home-container__results {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem 0;
-}
-
-.home-container__results--card {
-  display: flex;
-  justify-content: center;
-  margin: 2rem 0;
+  &__results {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    p {
+      text-align: center;
+      font-weight: 500;
+    }
+    &--card {
+      display: flex;
+      justify-content: center;
+      margin: 2rem 0;
+    }
+  }
 }
