update header linking

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <span>Tripadvisor</span>
+  <a routerLink="/home" mat-button class="toolbar__home">Tripadvisor</a>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
