--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,9 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.toolbar__home {
+  font-size: 1.8rem;
+  letter-spacing: normal;
+  font-weight: 700;
+}
