--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -8,6 +8,6 @@
     <mat-divider></mat-divider>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>MORE</button>
+    <a routerLink="/location/{{ someArray.location_id }}" mat-button>MORE</a>
   </mat-card-actions>
 </mat-card>
