--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -1,1 +1,12 @@
-<p>location works!</p>
+<div class="location__container">
+  <div class="location__container__title"></div>
+  <div class="location__container__image-tiles"></div>
+  <div class="location__container__about">
+    <div class="about-info"></div>
+    <div class="about-amenities"></div>
+  </div>
+  <div class="location__container__reviews">
+    <div class="review-score"></div>
+    <div class="review-detail"></div>
+  </div>
+</div>
