add title to location comp

--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -1,5 +1,7 @@
 <div class="location__container">
-  <div class="location__container__title"></div>
+  <div class="location__container__title">
+    <app-location-title name="Hotel Shattuck Plaza"></app-location-title>
+  </div>
   <div class="location__container__image-tiles"></div>
   <div class="location__container__about">
     <div class="about-info"></div>
