add photos tile to location page

--- a/src/app/components/location-title/location-title.component.html
+++ b/src/app/components/location-title/location-title.component.html
@@ -4,7 +4,7 @@
     <img src="{{ src }}" />
     <p>{{ rating }} {{ ranking }}</p>
   </div>
-  <p>
+  <p *ngIf="address">
     <mat-icon>pin_drop</mat-icon>
     {{ address }}
   </p>
