--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,13 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.container--center {
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  padding-left: 2.4rem;
+  padding-right: 2.4rem;
+  width: calc(113.6rem + 2.4rem * 2);
+}
