remove medium img to improve photo resolution

--- a/src/app/components/location-image-tiles/location-image-tiles.component.html
+++ b/src/app/components/location-image-tiles/location-image-tiles.component.html
@@ -3,9 +3,9 @@
     <img src="{{ photos[0].images.large.url }}" />
   </mat-grid-tile>
   <mat-grid-tile colspan="1" rowspan="1" class="img--fill"
-    ><img src="{{ photos[1].images.medium.url }}"
+    ><img src="{{ photos[1].images.large.url }}"
   /></mat-grid-tile>
   <mat-grid-tile colspan="1" rowspan="1" class="img--fill"
-    ><img src="{{ photos[2].images.medium.url }}"
+    ><img src="{{ photos[2].images.large.url }}"
   /></mat-grid-tile>
 </mat-grid-list>
