--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -3,7 +3,7 @@
   class="progress-bar"
   *ngIf="isDataLoaded !== true"
 ></mat-progress-bar>
-<div class="location--container" *ngIf="isDataLoaded">
+<div class="location--container">
   <div class="location--container__title container--center">
     <app-location-title
       name="{{ dataReceived.name }}"
